added auto discovery

--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,14 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+
+    "require": {},
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Rais\\Contact\\ContactServiceProvider"
+            ]
+        }
+    }
+    
 }
